# pdf-to-markdown

./: .gitignore  LICENSE  README.md  app.py  extract.py  math_to_latex.json  pyproject.toml  requirements.txt
config/: config.yaml
pdf2md/: __init__.py  __main__.py  analyze.py  blocks.py  classify.py  cli.py  converter.py  fonts.py  headers.py  images.py  inline.py  ir.py  loader.py  math_detect.py  patterns.py  postprocess.py  regions.py  serialize.py  tables.py  textnorm.py
pdf2md/plugins/: __init__.py  math_ml.py
tests/: test_end_to_end.py  test_rotation.py  test_units.py
tests/fixtures/: generate.py
